--- a/esercizioDadi/index.html
+++ b/esercizioDadi/index.html
@@ -9,7 +9,6 @@
 <body>
     
 
-    <script src="js/mail/mail.js"></script>
-    <script src="js/dadi/dadi.js"></script>
+    <script src="js/dadi.js"></script>
 </body>
 </html>
