--- a/esercizioMail/index.html
+++ b/esercizioMail/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+
+    <h1>Email inserite</h1>
+
+    <p>giuseppeconte@gmail.com", "matteosalvini@gmail.com", "alessandrodibattista@gmail.com", "marcorizzo@gmail.com</p>
     
 
     <script src="js/mail.js"></script>
